--- a/config_sample.env
+++ b/config_sample.env
@@ -1,14 +1,12 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "5703031142:AAHRLd_LgjVP5x7Adc6d5Xusr7ySvZ_yj1o"                              # Require restart after changing it while bot running
+OWNER_ID = "1053777957"                               # Require restart after changing it while bot running
+TELEGRAM_API = "25873459"                         
+TELEGRAM_HASH = "284b34da96a3a626beada31439cac353"  
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
-DATABASE_URL = ""                           # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://spidy:MongoDB1432@cluster0.t4d9h.mongodb.net/?retryWrites=true&w=majority"                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
 AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
@@ -52,8 +50,8 @@ RCLONE_SERVE_USER = ""
 RCLONE_SERVE_PASS = ""
 
 # Update
-UPSTREAM_REPO = ""
-UPSTREAM_BRANCH = ""
+UPSTREAM_REPO = "https://github.com/spidy-naik/WZML-X"
+UPSTREAM_BRANCH = "master"
 UPGRADE_PACKAGES = ""
 
 # Leech & Mirror
@@ -77,8 +75,8 @@ LINKS_LOG_ID = ""
 
 # qBittorrent/Aria2c
 TORRENT_TIMEOUT = ""
-BASE_URL = ""
-BASE_URL_PORT = ""
+BASE_URL = "https://185.217.125.80:8080"
+BASE_URL_PORT = "8080"
 WEB_PINCODE = "False"
 
 #Queueing system
